--- a/style.css
+++ b/style.css
@@ -1,26 +1,60 @@
-  body {
-      margin: 0;
-      padding: 100px;
-      font-size: 30px;
-      font-weight: lighter;
-  }
+body {
+    margin: 0;
+    padding: 100px;
+    font-size: 30px;
+    font-weight: lighter;
+    font-family: sans-serif;
+    color: #202020;
+    background-color: #FAFAFA;
+}
 
-  input[type="text"] {
-      margin: 10px;
-      padding: 0.5em 1em;
-      font-size: inherit;
-      font-weight: inherit;
-      border-radius: 2px;
-      border: 1px solid hsla(220, 0%, 80%);
-  }
+h1, h2, h3, h4, h5, h6, p {
+    font-family: inherit;
+    font-weight: inherit;
+}
 
-  button {
-      margin: 10px;
-      padding: 0.5em 1em;
-      font-size: inherit;
-      font-weight: lighter;
-      border: 1px solid hsla(220, 80%, 40%);
-      background-color: hsla(220, 80%, 40%);
-      color: white;
-      border-radius: 2px;
-  }
+h2 {
+    font-size: 17px;
+    color: #D0D0D0;
+    text-transform: uppercase;
+    letter-spacing: 0.5ex;
+    margin: 1em 0em;
+}
+
+p {
+    font-size: 40px;
+    color: inherit;
+    margin: 1em 0em;
+}
+
+.validationMessage {
+    font-size: 17px;
+    color: hsla(350, 80%, 60%);
+}
+
+input[type="text"], button {
+    margin: 10px 10px 10px 0px;
+    padding: 0.5em 1em;
+    font-size: inherit;
+    font-weight: inherit;
+    border-radius: 2px;
+}
+
+input[type="text"] {
+    border: 1px solid hsla(220, 0%, 80%);
+    width: 300px;
+}
+
+button {
+    border: 1px solid hsla(220, 80%, 40%);
+    background-color: hsla(220, 80%, 40%);
+    color: white;
+}
+
+.example {
+    background-color: #FFFFFF;
+    padding: 50px;
+    margin: 50px;
+    border-radius: 2px;
+    box-shadow: 0px 5px 2px rgba(0, 0, 0, 0.05);
+}
