--- a/style.css
+++ b/style.css
@@ -45,10 +45,19 @@ input[type="text"] {
     width: 300px;
 }
 
+input[type="text"]:focus {
+    outline: none;
+    border: 1px solid hsla(220, 80%, 60%);
+}
+
 button {
     border: 1px solid hsla(220, 80%, 40%);
     background-color: hsla(220, 80%, 40%);
     color: white;
+}
+
+button {
+    outline: none;
 }
 
 .example {
